--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,35 @@
 }
 
 /********************  */
+/* Featured in SECTION  */
+/********************  */
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+  opacity: 50%;
+}
+
+.logos img {
+  height: 3.2rem;
+  /* filter: grayscale(100%); */
+  filter: brightness(0);
+}
+
+/********************  */
 /* HOW IT WORKS SECTION  */
 /********************  */
 
