--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@
   font-weight: 500;
   text-align: center;
   margin-bottom: 2.4rem;
+  color: #888;
 }
 
 .logos {
@@ -206,4 +207,12 @@
 
 .step-img {
   width: 35%;
+}
+
+/********************  */
+/* Meals SECTION  */
+/********************  */
+
+.section-meals {
+  padding: 9.6rem 0;
 }
