--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,7 @@
 .cta {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  overflow: hidden;
   background-color: #e67e22;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
@@ -488,6 +489,22 @@
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
 
   height: 50rem;
+}
+
+.cta-text-box {
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #45260a;
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+.cta .heading-secondary {
+  margin-bottom: 3.2rem;
+  color: #45260a;
 }
 
 .cta-img-box {
@@ -499,4 +516,27 @@
     url(../img/eating.jpg);
   background-size: cover;
   background-position: center;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.cta-form input {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+}
+.cta-form select {
+}
+.cta-form .btn {
 }
