--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@
 /********************  */
 
 .section-cta {
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
@@ -490,7 +490,7 @@
 }
 
 .cta-text-box {
-  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  padding: 2.8rem 6.4rem 6.4rem 6.4rem;
   color: #45260a;
 }
 
@@ -508,8 +508,8 @@
 .cta-img-box {
   background-image: linear-gradient(
       to right bottom,
-      rgba(235, 152, 78, 0.3),
-      rgba(230, 126, 34, 0.35)
+      rgba(235, 152, 78, 0.15),
+      rgba(230, 126, 34, 0.15)
     ),
     url(../img/eating.jpg);
   background-size: cover;
@@ -555,7 +555,12 @@
 /********************  */
 
 .footer {
-  padding: 9.6rem 0;
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
 }
 
 .logo-col {
@@ -590,6 +595,16 @@
   font-size: 1.8rem;
   font-weight: 500;
   margin-bottom: 4rem;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.address {
+  margin-bottom: 2.4rem;
 }
 
 .footer-nav {
