--- a/css/quaries.css
+++ b/css/quaries.css
@@ -111,11 +111,46 @@
   }
 
   .main-nav {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.97);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+
+    /* Hide navigation */
+    /* No transitions allowed */
+    /* display: none; */
+
+    /* Hidding elements without using Display:none; */
+
+    /* 1. Hide it visualy */
+    opacity: 0;
+    /* 2. Make it unaccessible to mouse and keyboard */
+    pointer-events: none;
+    /* 3. Hide it from screen readers */
+    visibility: hidden;
+  }
+
+  .nav-open,
+  .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
   }
 }
