--- a/css/quaries.css
+++ b/css/quaries.css
@@ -116,7 +116,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    transform: translateX(100%);
 
     display: flex;
     align-items: center;
@@ -137,13 +138,20 @@
     visibility: hidden;
   }
 
-  .nav-open,
-  .main-nav {
+  .nav-open .main-nav {
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
+    transform: translateX(0);
   }
 
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
   .main-nav-list {
     flex-direction: column;
     gap: 4.8rem;
