--- a/css/quaries.css
+++ b/css/quaries.css
@@ -122,7 +122,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s;
+    transition: all 0.5s ease-out;
 
     /* Hide navigation */
     /* No transitions allowed */
